# python-c-extension-hacking

./: .clang-format  .gitignore  CMakeLists.txt  README.md  pyproject.toml  setup.py
src/: fib.c  vector_add.cpp  vector_add.h
